<resources>
    <string name="app_name">Memestash</string>
    <string name="introText">Welcome</string>
    <string name="pfContentDescription">Profile Picture</string>
    <string name="username">username</string>
    <string name="coinsAmount">9999999999</string>
    <string name="cardInfo">Views: 22K; Likes: 2K</string>
    <string name="card_image">Card Image</string>
    <string name="profile_picture">Profile picture</string>
    <string name="collection">Collection</string>
    <string name="name">Name</string>
    <string name="logout_button">Logout</string>
    <string name="search_button">Search</string>
    <string name="home_button">Home</string>
    <string name="cards_button">Cards</string>
    <string name="messages_button">Messages</string>
    <string name="back_text">Back</string>
    <string name="message_placeholder">Message...</string>
    <string name="send_text">Send</string>
</resources>