<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mat_black"
    android:padding="10dp"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#71DB77"
        android:fontFamily="@font/bungee"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:text="@string/app_name"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/indexFragment"
        android:name="be.howest.borobbrecht.memestash.index.IndexFragment"
        android:layout_width="377dp"
        android:layout_height="553dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:layout="@layout/index_fragment" />

    <LinearLayout
        android:layout_width="403dp"
        android:layout_height="98dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indexFragment">

        <TextView
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout_button"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/searchNavButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_button"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/homeNavButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_button"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/collectionNavButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cards_button"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/messagesNavButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/messages_button"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>