<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mat_black"
    app:layout_constraintBottom_toTopOf="parent"
    tools:context=".search.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchName"
            android:layout_width="match_parent"
            android:layout_height="673dp">

            <EditText
                android:id="@+id/searchByName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@+id/searchByName"
                android:text="@string/name"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
                <!-- Paste this if implementing the recyclerview -> app:layout_constraintBottom_toTopOf="@+id/searchResults" -->

            <!--TODO: Recyclerview will break without adapter. Fix this in an issue -->
            <!-- <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchResults"
                android:layout_width="361dp"
                android:layout_height="613dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchByName" /> -->
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/BottomNavBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/logout_button"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_button"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home_button"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cards_button"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>